# fine-tune

./: .cpu_startup.sh  data.py  finetune.py  infer.py  main.py  model.py  pyproject.toml  test_finetuned.py
lora-qwen-physio/best_model/: README.md
lora-qwen-physio/checkpoint-epoch-3/: adapter_config.json
