[project]
name = "fine-tune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.4.0",
    "gh>=0.0.4",
    "huggingface-hub>=0.29.1",
    "peft>=0.14.0",
    "psutil>=7.0.0",
    "torch==2.3.0",
    "transformers>=4.49.0",
]
