[project]
name = "fine-tune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.4.0",
    "datasets>=3.3.2",
    "dotenv>=0.9.9",
    "gh>=0.0.4",
    "huggingface-hub>=0.29.1",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "psutil>=7.0.0",
    "scikit-learn>=1.6.1",
    "torch==2.3.0",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
]
